WHAT IS NEW?


August ? 2020 [H???]

  *** New Features

   * New Plotscripting Features
    * "set timer args" [Ralph]

  *** Changes

  *** Bugfixes
    * "set opacity" (with opacity < 100%) didn't always turn on blending
      [Ralph]
    * Bug #1118 In turn-based battles, non-blocking attacks delayed by X
      attacks could delay by up to X turns. You have to turn off the "Non-turn
      attack delays can also cause turn delays" back-compatibility bit to get
      this bugfix [Ralph]

  *** Stuff Only Developers Will Notice
    * clang can be used to compile instead of gcc. Added "compiler=clang|gcc"
      flag to scons [Ralph]


May 2 2020 [Gorgonzola]

  *** New Features
    * True transparent sprite and map layer slices!
      You can control opacity and blend mode: normal, add or multiply.
      Blending works by mapping to the nearest master palette color, which
      is fast-enough but sometimes looks poor; there's a global setting to
      control how that's done. (Press Ctrl-F3 in the slice editor to preview
      what future 32-bit blending will look like!) [Ralph]
    * New dissolve/appear animations: Fade, Ghostly fade, Fade to white,
      Puff, Fade up, Blip [Ralph]
    * Numlock is now respected in both Game and Custom; when it's off numpad
      keys are also mapped to other keys, so you can use the numpad for
      movement.  When it's on, no remapping happens. (You can disable
      remapping with Ctrl-Shift-N.) [Ralph]
    * "Dead Foe (dead heroes only)" and "Foe (including dead heroes)" attack
      target classes [Ralph]
    * Title Screen Text; a quick and easy way to put a line of text like
      a version number at the bottom of the title screen [James]
    * "Reset UI Colors/Box Styles to defaults" options in the Master Palettes
      menu, and Ctrl-D rescue key [Ralph]
    * Enemy editor option to show a backdrop behind the enemy sprite [Ralph]
    * While encoding .ogg files, added an advanced option not to filter out