@@ -6121,8 +6121,10 @@ lookup slice(sl:map overlay)
 lookup slice(sl:walkabout layer)
 lookup slice(sl:hero layer)
 lookup slice(sl:npc layer)
-lookup slice(sl:walkabout sprite component)
-lookup slice(sl:walkabout shadow component)
+lookup slice(sl:walkabout sprite)
+lookup slice(sl:walkabout sprite component)  # Same as lookup slice(sl:walkabout sprite)
+lookup slice(sl:walkabout shadow)
+lookup slice(sl:walkabout shadow component)  # Same as lookup slice(sl:walkabout shadow)
 lookup slice(sl:backdrop)
 lookup slice(sl:map layer0)
 lookup slice(sl:map layer1)
@@ -6140,35 +6142,6 @@ lookup slice(sl:map layer12)
 lookup slice(sl:map layer13)
 lookup slice(sl:map layer14)
 lookup slice(sl:map layer15)
-lookup slice(sl:status portrait)
-lookup slice(sl:status walkabout)
-lookup slice(sl:status battlesprite)
-lookup slice(sl:status page select)
-lookup slice(sl:status statlist)
-lookup slice(sl:status hide if no mp)
-lookup slice(sl:status hide if no lmp)
-lookup slice(sl:status hide if max lev)
-lookup slice(sl:plank holder)
-lookup slice(sl:status hide if no portrait)
-lookup slice(sl:item itemlist)
-lookup slice(sl:item exitbutton)
-lookup slice(sl:item sortbutton)
-lookup slice(sl:item trashbutton)
-lookup slice(sl:plank menu selectable)
-lookup slice(sl:spell listlist)
-lookup slice(sl:spell spelllist)
-lookup slice(sl:spell hide if no list)
-lookup slice(sl:spell cancelbutton)
-lookup slice(sl:virtual keyboard button)
-lookup slice(sl:virtual keyboard buttontext)
-lookup slice(sl:virtual keyboard shift)
-lookup slice(sl:virtual keyboard symbols)
-lookup slice(sl:virtual keyboard select)
-lookup slice(sl:virtual keyboard entrytext)
-lookup slice(sl:virtual keyboard del)
-lookup slice(sl:virtual keyboard enter)
-lookup slice(sl:shop buy info panel)
-lookup slice(sl:status hide if no hp)
 lookup slice(sl:pathfind dest display)
 </example>
 			<seealso>
