@@ -339,100 +339,100 @@ FUNCTION SliceLookupCodename (byval code as integer) as string
   CASE 0: RETURN ""
 '--the following is updated from slices.bi using the misc/sl_lookup.py script
 '<SLICE LOOKUP NAMES>
-  CASE SL_EDITOR_SPLASH_MENU: RETURN "editor_splash_menu"
-  CASE SL_EDITOR_THINGBROWSER_THINGLIST: RETURN "editor_thingbrowser_thinglist"
-  CASE SL_EDITOR_THINGBROWSER_PLANK_SPRITE: RETURN "editor_thingbrowser_plank_sprite"
-  CASE SL_EDITOR_THINGBROWSER_BACK_HOLDER: RETURN "editor_thingbrowser_back_holder"
-  CASE SL_EDITOR_THINGBROWSER_MODE_INDICATOR: RETURN "editor_thingbrowser_mode_indicator"
-  CASE SL_EDITOR_THINGBROWSER_NEW_HOLDER: RETURN "editor_thingbrowser_new_holder"
-  CASE SL_EDITOR_THINGBROWSER_NOSCROLL_AREA: RETURN "editor_thingbrowser_noscroll_area"
-  CASE SL_EDITOR_THINGBROWSER_FILTER_HOLDER: RETURN "editor_thingbrowser_filter_holder"
-  CASE SL_EDITOR_THINGBROWSER_TYPE_QUERY: RETURN "editor_thingbrowser_type_query"
-  CASE SL_EDITOR_THINGBROWSER_FILTER_TEXT: RETURN "editor_thingbrowser_filter_text"
-  CASE SL_EDITOR_PROMPT_FOR_STRING_TEXT: RETURN "editor_prompt_for_string_text"
-  CASE SL_EDITOR_PROMPT_FOR_STRING_CAPTION: RETURN "editor_prompt_for_string_caption"
-  CASE SL_EDITOR_SSED_LIST: RETURN "editor_ssed_list"
-  CASE SL_EDITOR_SSED_SET_TEMPL: RETURN "editor_ssed_set_templ"
-  CASE SL_EDITOR_SSED_FRAME_HOLDER: RETURN "editor_ssed_frame_holder"
-  CASE SL_EDITOR_SSED_FRAME_TEMPL: RETURN "editor_ssed_frame_templ"
-  CASE SL_EDITOR_SSED_FRAME_SPRITE: RETURN "editor_ssed_frame_sprite"
-  CASE SL_EDITOR_SSED_INFO_TEXT: RETURN "editor_ssed_info_text"
-  CASE SL_EDITOR_SSED_PALETTE_GRID: RETURN "editor_ssed_palette_grid"
-  CASE SL_EDITOR_SSED_PALETTE_TEXT: RETURN "editor_ssed_palette_text"
-  CASE SL_EDITOR_SSED_SET_INFO: RETURN "editor_ssed_set_info"
-  CASE SL_EDITOR_SSED_SET: RETURN "editor_ssed_set"
-  CASE SL_EDITOR_SSED_PALETTE_ROOT: RETURN "editor_ssed_palette_root"
-  CASE SL_EDITOR_SSED_INFO_TEXT_RIGHT: RETURN "editor_ssed_info_text_right"
-  CASE SL_EDITOR_SSED_CAPTION_TEXT: RETURN "editor_ssed_caption_text"
-  CASE SL_EDITOR_ENEMY_SPRITE: RETURN "editor_enemy_sprite"
+  CASE SL_EDITOR_SPLASH_MENU: RETURN "editor splash menu"
+  CASE SL_EDITOR_THINGBROWSER_THINGLIST: RETURN "editor thingbrowser thinglist"
+  CASE SL_EDITOR_THINGBROWSER_PLANK_SPRITE: RETURN "editor thingbrowser plank sprite"
+  CASE SL_EDITOR_THINGBROWSER_BACK_HOLDER: RETURN "editor thingbrowser back holder"
+  CASE SL_EDITOR_THINGBROWSER_MODE_INDICATOR: RETURN "editor thingbrowser mode indicator"
+  CASE SL_EDITOR_THINGBROWSER_NEW_HOLDER: RETURN "editor thingbrowser new holder"
+  CASE SL_EDITOR_THINGBROWSER_NOSCROLL_AREA: RETURN "editor thingbrowser noscroll area"
+  CASE SL_EDITOR_THINGBROWSER_FILTER_HOLDER: RETURN "editor thingbrowser filter holder"
+  CASE SL_EDITOR_THINGBROWSER_TYPE_QUERY: RETURN "editor thingbrowser type query"
+  CASE SL_EDITOR_THINGBROWSER_FILTER_TEXT: RETURN "editor thingbrowser filter text"
+  CASE SL_EDITOR_PROMPT_FOR_STRING_TEXT: RETURN "editor prompt for string text"
+  CASE SL_EDITOR_PROMPT_FOR_STRING_CAPTION: RETURN "editor prompt for string caption"
+  CASE SL_EDITOR_SSED_LIST: RETURN "editor ssed list"
+  CASE SL_EDITOR_SSED_SET_TEMPL: RETURN "editor ssed set templ"
+  CASE SL_EDITOR_SSED_FRAME_HOLDER: RETURN "editor ssed frame holder"
+  CASE SL_EDITOR_SSED_FRAME_TEMPL: RETURN "editor ssed frame templ"
+  CASE SL_EDITOR_SSED_FRAME_SPRITE: RETURN "editor ssed frame sprite"
+  CASE SL_EDITOR_SSED_INFO_TEXT: RETURN "editor ssed info text"
+  CASE SL_EDITOR_SSED_PALETTE_GRID: RETURN "editor ssed palette grid"
+  CASE SL_EDITOR_SSED_PALETTE_TEXT: RETURN "editor ssed palette text"
+  CASE SL_EDITOR_SSED_SET_INFO: RETURN "editor ssed set info"
+  CASE SL_EDITOR_SSED_SET: RETURN "editor ssed set"
+  CASE SL_EDITOR_SSED_PALETTE_ROOT: RETURN "editor ssed palette root"
+  CASE SL_EDITOR_SSED_INFO_TEXT_RIGHT: RETURN "editor ssed info text right"
+  CASE SL_EDITOR_SSED_CAPTION_TEXT: RETURN "editor ssed caption text"
+  CASE SL_EDITOR_ENEMY_SPRITE: RETURN "editor enemy sprite"
   CASE SL_ROOT: RETURN "root"
-  CASE SL_TEXTBOX_TEXT: RETURN "textbox_text"
-  CASE SL_TEXTBOX_PORTRAIT: RETURN "textbox_portrait"
-  CASE SL_TEXTBOX_CHOICE0: RETURN "textbox_choice0"
-  CASE SL_TEXTBOX_CHOICE1: RETURN "textbox_choice1"
-  CASE SL_TEXTBOX_BOX: RETURN "textbox_box"
-  CASE SL_TEXTBOX_PORTRAIT_BOX: RETURN "textbox_portrait_box"
-  CASE SL_TEXTBOX_CHOICE_BOX: RETURN "textbox_choice_box"
-  CASE SL_TEXTBOX_ROOT: RETURN "textbox_root"
-  CASE SL_SCRIPT_LAYER: RETURN "script_layer"
-  CASE SL_TEXTBOX_LAYER: RETURN "textbox_layer"
-  CASE SL_STRING_LAYER: RETURN "string_layer"
+  CASE SL_TEXTBOX_TEXT: RETURN "textbox text"
+  CASE SL_TEXTBOX_PORTRAIT: RETURN "textbox portrait"
+  CASE SL_TEXTBOX_CHOICE0: RETURN "textbox choice0"
+  CASE SL_TEXTBOX_CHOICE1: RETURN "textbox choice1"
+  CASE SL_TEXTBOX_BOX: RETURN "textbox box"
+  CASE SL_TEXTBOX_PORTRAIT_BOX: RETURN "textbox portrait box"
+  CASE SL_TEXTBOX_CHOICE_BOX: RETURN "textbox choice box"
+  CASE SL_TEXTBOX_ROOT: RETURN "textbox root"
+  CASE SL_SCRIPT_LAYER: RETURN "script layer"
+  CASE SL_TEXTBOX_LAYER: RETURN "textbox layer"
+  CASE SL_STRING_LAYER: RETURN "string layer"
   CASE SL_RESERVE: RETURN "reserve"
   CASE SL_MAPROOT: RETURN "maproot"
-  CASE SL_OBSOLETE_OVERHEAD: RETURN "obsolete_overhead"
-  CASE SL_MAP_OVERLAY: RETURN "map_overlay"
-  CASE SL_WALKABOUT_LAYER: RETURN "walkabout_layer"
-  CASE SL_HERO_LAYER: RETURN "hero_layer"
-  CASE SL_NPC_LAYER: RETURN "npc_layer"
-  CASE SL_WALKABOUT_SPRITE_COMPONENT: RETURN "walkabout_sprite_component"
-  CASE SL_WALKABOUT_SHADOW_COMPONENT: RETURN "walkabout_shadow_component"
+  CASE SL_OBSOLETE_OVERHEAD: RETURN "obsolete overhead"
+  CASE SL_MAP_OVERLAY: RETURN "map overlay"
+  CASE SL_WALKABOUT_LAYER: RETURN "walkabout layer"
+  CASE SL_HERO_LAYER: RETURN "hero layer"
+  CASE SL_NPC_LAYER: RETURN "npc layer"
+  CASE SL_WALKABOUT_SPRITE: RETURN "walkabout sprite"
+  CASE SL_WALKABOUT_SHADOW: RETURN "walkabout shadow"
   CASE SL_BACKDROP: RETURN "backdrop"
-  CASE SL_MAP_LAYER0: RETURN "map_layer0"
-  CASE SL_MAP_LAYER1: RETURN "map_layer1"
-  CASE SL_MAP_LAYER2: RETURN "map_layer2"
-  CASE SL_MAP_LAYER3: RETURN "map_layer3"
-  CASE SL_MAP_LAYER4: RETURN "map_layer4"
-  CASE SL_MAP_LAYER5: RETURN "map_layer5"
-  CASE SL_MAP_LAYER6: RETURN "map_layer6"
-  CASE SL_MAP_LAYER7: RETURN "map_layer7"
-  CASE SL_MAP_LAYER8: RETURN "map_layer8"
-  CASE SL_MAP_LAYER9: RETURN "map_layer9"
-  CASE SL_MAP_LAYER10: RETURN "map_layer10"
-  CASE SL_MAP_LAYER11: RETURN "map_layer11"
-  CASE SL_MAP_LAYER12: RETURN "map_layer12"
-  CASE SL_MAP_LAYER13: RETURN "map_layer13"
-  CASE SL_MAP_LAYER14: RETURN "map_layer14"
-  CASE SL_MAP_LAYER15: RETURN "map_layer15"
-  CASE SL_STATUS_PORTRAIT: RETURN "status_portrait"
-  CASE SL_STATUS_WALKABOUT: RETURN "status_walkabout"
-  CASE SL_STATUS_BATTLESPRITE: RETURN "status_battlesprite"
-  CASE SL_STATUS_PAGE_SELECT: RETURN "status_page_select"
-  CASE SL_STATUS_STATLIST: RETURN "status_statlist"
-  CASE SL_STATUS_HIDE_IF_NO_MP: RETURN "status_hide_if_no_mp"
-  CASE SL_STATUS_HIDE_IF_NO_LMP: RETURN "status_hide_if_no_lmp"
-  CASE SL_STATUS_HIDE_IF_MAX_LEV: RETURN "status_hide_if_max_lev"
-  CASE SL_PLANK_HOLDER: RETURN "plank_holder"
-  CASE SL_STATUS_HIDE_IF_NO_PORTRAIT: RETURN "status_hide_if_no_portrait"
-  CASE SL_ITEM_ITEMLIST: RETURN "item_itemlist"
-  CASE SL_ITEM_EXITBUTTON: RETURN "item_exitbutton"
-  CASE SL_ITEM_SORTBUTTON: RETURN "item_sortbutton"
-  CASE SL_ITEM_TRASHBUTTON: RETURN "item_trashbutton"
-  CASE SL_PLANK_MENU_SELECTABLE: RETURN "plank_menu_selectable"
-  CASE SL_SPELL_LISTLIST: RETURN "spell_listlist"
-  CASE SL_SPELL_SPELLLIST: RETURN "spell_spelllist"
-  CASE SL_SPELL_HIDE_IF_NO_LIST: RETURN "spell_hide_if_no_list"
-  CASE SL_SPELL_CANCELBUTTON: RETURN "spell_cancelbutton"
-  CASE SL_VIRTUAL_KEYBOARD_BUTTON: RETURN "virtual_keyboard_button"
-  CASE SL_VIRTUAL_KEYBOARD_BUTTONTEXT: RETURN "virtual_keyboard_buttontext"
-  CASE SL_VIRTUAL_KEYBOARD_SHIFT: RETURN "virtual_keyboard_shift"
-  CASE SL_VIRTUAL_KEYBOARD_SYMBOLS: RETURN "virtual_keyboard_symbols"
-  CASE SL_VIRTUAL_KEYBOARD_SELECT: RETURN "virtual_keyboard_select"
-  CASE SL_VIRTUAL_KEYBOARD_ENTRYTEXT: RETURN "virtual_keyboard_entrytext"
-  CASE SL_VIRTUAL_KEYBOARD_DEL: RETURN "virtual_keyboard_del"
-  CASE SL_VIRTUAL_KEYBOARD_ENTER: RETURN "virtual_keyboard_enter"
-  CASE SL_SHOP_BUY_INFO_PANEL: RETURN "shop_buy_info_panel"
-  CASE SL_STATUS_HIDE_IF_NO_HP: RETURN "status_hide_if_no_hp"
-  CASE SL_PATHFIND_DEST_DISPLAY: RETURN "pathfind_dest_display"
+  CASE SL_MAP_LAYER0: RETURN "map layer0"
+  CASE SL_MAP_LAYER1: RETURN "map layer1"
+  CASE SL_MAP_LAYER2: RETURN "map layer2"
+  CASE SL_MAP_LAYER3: RETURN "map layer3"
+  CASE SL_MAP_LAYER4: RETURN "map layer4"
+  CASE SL_MAP_LAYER5: RETURN "map layer5"
+  CASE SL_MAP_LAYER6: RETURN "map layer6"
+  CASE SL_MAP_LAYER7: RETURN "map layer7"
+  CASE SL_MAP_LAYER8: RETURN "map layer8"
+  CASE SL_MAP_LAYER9: RETURN "map layer9"
+  CASE SL_MAP_LAYER10: RETURN "map layer10"
+  CASE SL_MAP_LAYER11: RETURN "map layer11"
+  CASE SL_MAP_LAYER12: RETURN "map layer12"
+  CASE SL_MAP_LAYER13: RETURN "map layer13"
+  CASE SL_MAP_LAYER14: RETURN "map layer14"
+  CASE SL_MAP_LAYER15: RETURN "map layer15"
+  CASE SL_STATUS_PORTRAIT: RETURN "status portrait"
+  CASE SL_STATUS_WALKABOUT: RETURN "status walkabout"
+  CASE SL_STATUS_BATTLESPRITE: RETURN "status battlesprite"
+  CASE SL_STATUS_PAGE_SELECT: RETURN "status page select"
+  CASE SL_STATUS_STATLIST: RETURN "status statlist"
+  CASE SL_STATUS_HIDE_IF_NO_MP: RETURN "status hide if no mp"
+  CASE SL_STATUS_HIDE_IF_NO_LMP: RETURN "status hide if no lmp"
+  CASE SL_STATUS_HIDE_IF_MAX_LEV: RETURN "status hide if max lev"
+  CASE SL_PLANK_HOLDER: RETURN "plank holder"
+  CASE SL_STATUS_HIDE_IF_NO_PORTRAIT: RETURN "status hide if no portrait"
+  CASE SL_ITEM_ITEMLIST: RETURN "item itemlist"
+  CASE SL_ITEM_EXITBUTTON: RETURN "item exitbutton"
+  CASE SL_ITEM_SORTBUTTON: RETURN "item sortbutton"
+  CASE SL_ITEM_TRASHBUTTON: RETURN "item trashbutton"
+  CASE SL_PLANK_MENU_SELECTABLE: RETURN "plank menu selectable"
+  CASE SL_SPELL_LISTLIST: RETURN "spell listlist"
+  CASE SL_SPELL_SPELLLIST: RETURN "spell spelllist"
+  CASE SL_SPELL_HIDE_IF_NO_LIST: RETURN "spell hide if no list"
+  CASE SL_SPELL_CANCELBUTTON: RETURN "spell cancelbutton"
+  CASE SL_VIRTUAL_KEYBOARD_BUTTON: RETURN "virtual keyboard button"
+  CASE SL_VIRTUAL_KEYBOARD_BUTTONTEXT: RETURN "virtual keyboard buttontext"
+  CASE SL_VIRTUAL_KEYBOARD_SHIFT: RETURN "virtual keyboard shift"
+  CASE SL_VIRTUAL_KEYBOARD_SYMBOLS: RETURN "virtual keyboard symbols"
+  CASE SL_VIRTUAL_KEYBOARD_SELECT: RETURN "virtual keyboard select"
+  CASE SL_VIRTUAL_KEYBOARD_ENTRYTEXT: RETURN "virtual keyboard entrytext"
+  CASE SL_VIRTUAL_KEYBOARD_DEL: RETURN "virtual keyboard del"
+  CASE SL_VIRTUAL_KEYBOARD_ENTER: RETURN "virtual keyboard enter"
+  CASE SL_SHOP_BUY_INFO_PANEL: RETURN "shop buy info panel"
+  CASE SL_STATUS_HIDE_IF_NO_HP: RETURN "status hide if no hp"
+  CASE SL_PATHFIND_DEST_DISPLAY: RETURN "pathfind dest display"
 '</SLICE LOOKUP NAMES>
   CASE IS > 0
    'TODO: cache slicelookup() in memory.
