@@ -21,7 +21,12 @@ CONST ENABLE_SLICE_DEBUG = NO
 'as a constant in someone's script, and changing it would break any
 'non-recompiled script that used it.
 'Lookup codes starting with SL_EDITOR are for editor slice collections in
-'Custom, and aren't included in plotscr.hsd.
+'Custom, and aren't included in plotscr.hsd/plotdict.xml. Other lookup
+'codes can also be omitted from plotscr.hsd/plotdict.xml by adding a
+'comment containing "Hide".
+'Multiple names for a lookup code can be defined by adding a comment
+'containing "Alias" in ones after the first. The first name is the main one.
+'Other comments are ignored.
 
 '<SLICE LOOKUP CODES>
 CONST SL_EDITOR_SPLASH_MENU   = -100
@@ -69,8 +74,10 @@ CONST SL_MAP_OVERLAY          = -100020
 CONST SL_WALKABOUT_LAYER      = -100010
 CONST SL_HERO_LAYER           = -100011
 CONST SL_NPC_LAYER            = -100012
-CONST SL_WALKABOUT_SPRITE_COMPONENT = -100013
-CONST SL_WALKABOUT_SHADOW_COMPONENT = -100014
+CONST SL_WALKABOUT_SPRITE = -100013
+CONST SL_WALKABOUT_SPRITE_COMPONENT = -100013  'Alias
+CONST SL_WALKABOUT_SHADOW = -100014
+CONST SL_WALKABOUT_SHADOW_COMPONENT = -100014  'Alias
 CONST SL_BACKDROP             = -100015
 CONST SL_MAP_LAYER0           = -101000
 CONST SL_MAP_LAYER1           = -101001
@@ -88,35 +95,35 @@ CONST SL_MAP_LAYER12          = -101012
 CONST SL_MAP_LAYER13          = -101013
 CONST SL_MAP_LAYER14          = -101014
 CONST SL_MAP_LAYER15          = -101015
-CONST SL_STATUS_PORTRAIT      = -102000
-CONST SL_STATUS_WALKABOUT     = -102001
-CONST SL_STATUS_BATTLESPRITE  = -102002
-CONST SL_STATUS_PAGE_SELECT   = -102003
-CONST SL_STATUS_STATLIST      = -102004
-CONST SL_STATUS_HIDE_IF_NO_MP = -102005
-CONST SL_STATUS_HIDE_IF_NO_LMP = -102006
-CONST SL_STATUS_HIDE_IF_MAX_LEV = -102007
-CONST SL_PLANK_HOLDER         = -102008
-CONST SL_STATUS_HIDE_IF_NO_PORTRAIT = -102009
-CONST SL_ITEM_ITEMLIST        = -102010
-CONST SL_ITEM_EXITBUTTON      = -102011
-CONST SL_ITEM_SORTBUTTON      = -102012
-CONST SL_ITEM_TRASHBUTTON     = -102013
-CONST SL_PLANK_MENU_SELECTABLE = -102014
-CONST SL_SPELL_LISTLIST       = -102015
-CONST SL_SPELL_SPELLLIST      = -102016
-CONST SL_SPELL_HIDE_IF_NO_LIST = -102017
-CONST SL_SPELL_CANCELBUTTON   = -102018
-CONST SL_VIRTUAL_KEYBOARD_BUTTON     = -102019
-CONST SL_VIRTUAL_KEYBOARD_BUTTONTEXT = -102020
-CONST SL_VIRTUAL_KEYBOARD_SHIFT      = -102021
-CONST SL_VIRTUAL_KEYBOARD_SYMBOLS    = -102022
-CONST SL_VIRTUAL_KEYBOARD_SELECT     = -102023
-CONST SL_VIRTUAL_KEYBOARD_ENTRYTEXT  = -102024
-CONST SL_VIRTUAL_KEYBOARD_DEL        = -102025
-CONST SL_VIRTUAL_KEYBOARD_ENTER      = -102026
-CONST SL_SHOP_BUY_INFO_PANEL         = -102027
-CONST SL_STATUS_HIDE_IF_NO_HP        = -102028
+CONST SL_STATUS_PORTRAIT      = -102000  'Hide
+CONST SL_STATUS_WALKABOUT     = -102001  'Hide
+CONST SL_STATUS_BATTLESPRITE  = -102002  'Hide
+CONST SL_STATUS_PAGE_SELECT   = -102003  'Hide
+CONST SL_STATUS_STATLIST      = -102004  'Hide
+CONST SL_STATUS_HIDE_IF_NO_MP = -102005  'Hide
+CONST SL_STATUS_HIDE_IF_NO_LMP = -102006  'Hide
+CONST SL_STATUS_HIDE_IF_MAX_LEV = -102007  'Hide
+CONST SL_PLANK_HOLDER         = -102008  'Hide
+CONST SL_STATUS_HIDE_IF_NO_PORTRAIT = -102009  'Hide
+CONST SL_ITEM_ITEMLIST        = -102010  'Hide
+CONST SL_ITEM_EXITBUTTON      = -102011  'Hide
+CONST SL_ITEM_SORTBUTTON      = -102012  'Hide
+CONST SL_ITEM_TRASHBUTTON     = -102013  'Hide
+CONST SL_PLANK_MENU_SELECTABLE = -102014  'Hide
+CONST SL_SPELL_LISTLIST       = -102015  'Hide
+CONST SL_SPELL_SPELLLIST      = -102016  'Hide
+CONST SL_SPELL_HIDE_IF_NO_LIST = -102017  'Hide
+CONST SL_SPELL_CANCELBUTTON   = -102018  'Hide
+CONST SL_VIRTUAL_KEYBOARD_BUTTON     = -102019  'Hide
+CONST SL_VIRTUAL_KEYBOARD_BUTTONTEXT = -102020  'Hide
+CONST SL_VIRTUAL_KEYBOARD_SHIFT      = -102021  'Hide
+CONST SL_VIRTUAL_KEYBOARD_SYMBOLS    = -102022  'Hide
+CONST SL_VIRTUAL_KEYBOARD_SELECT     = -102023  'Hide
+CONST SL_VIRTUAL_KEYBOARD_ENTRYTEXT  = -102024  'Hide
+CONST SL_VIRTUAL_KEYBOARD_DEL        = -102025  'Hide
+CONST SL_VIRTUAL_KEYBOARD_ENTER      = -102026  'Hide
+CONST SL_SHOP_BUY_INFO_PANEL         = -102027  'Hide
+CONST SL_STATUS_HIDE_IF_NO_HP        = -102028  'Hide
 CONST SL_PATHFIND_DEST_DISPLAY       = -102100
 '</SLICE LOOKUP CODES>
 
